# zmq_simple_pirate_pattern

./: CMakeLists.txt  lpclient.cpp  lpclient.h  spqueue.cpp  spworker.cpp  zmsg.h
